--- a/_config.yml
+++ b/_config.yml
@@ -312,8 +312,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Sarvaiya]
+  first_name: [Mrunal]
 
   style: apa
   locale: en
