--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ work_url: # work page URL
 x_username: # your X handle
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
-cv_pdf: assets/pdf/resume.pdf # path to your CV PDF file
+# cv_pdf: assets/pdf/resume.pdf # path to your CV PDF file
 
 contact_note: # You can even add a little note about which of these is the best way to reach you.
 
